--- a/index.html
+++ b/index.html
@@ -1,75 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Calendar</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        #calendar {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            max-width: 400px;
-            margin: 20px auto;
-        }
-        .day, .weekday {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: center;
-        }
-        .weekday {
-            font-weight: bold;
-            background: #f4f4f4;
-        }
-        .empty {
-            border: none;
-            background: transparent;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Interactive Calendar</title>
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+    .calendar-container {
+      max-width: 500px;
+      margin: auto;
+    }
+    .calendar {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      gap: 5px;
+    }
+    .day, .weekday {
+      padding: 15px;
+      border-radius: 5px;
+      text-align: center;
+      font-size: 16px;
+      font-weight: bold;
+    }
+    .weekday {
+      background: #007bff;
+      color: white;
+    }
+    .current-month {
+      background: #f8f9fa;
+      border: 1px solid #dee2e6;
+      cursor: pointer;
+    }
+    .disabled-day {
+      background: #e9ecef;
+      color: #adb5bd;
+    }
+    .month-nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 10px;
+    }
+    .month-nav button {
+      border: none;
+      background: none;
+      font-size: 24px;
+      cursor: pointer;
+    }
+    .selected {
+      border: 2px solid #ffc107;
+    }
+  </style>
 </head>
 <body>
-    <h1>Monthly Calendar</h1>
-    <div id="calendar"></div>
+  <h1 class="mb-4">Monthly Calendar</h1>
+  <div class="calendar-container">
+    <div class="month-nav">
+      <button id="prev-month">&laquo;</button>
+      <h3 id="month-year"></h3>
+      <button id="next-month">&raquo;</button>
+    </div>
+    <div id="calendar" class="calendar"></div>
+  </div>
 
-    <script>
-        function generateCalendar(year, month) {
-            const calendar = document.getElementById("calendar");
-            calendar.innerHTML = ""; // Clear previous calendar
+  <!-- Card for selected day -->
+  <div id="day-card" class="card mt-4" style="display: none;">
+    <div class="card-body">
+      <h5 class="card-title" id="selected-day-title"></h5>
+      <p class="card-text">Timetable placeholder...</p>
+    </div>
+  </div>
 
-            const daysOfWeek = ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"];
-            daysOfWeek.forEach(day => {
-                const div = document.createElement("div");
-                div.className = "weekday";
-                div.textContent = day;
-                calendar.appendChild(div);
-            });
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    let currentYear = new Date().getFullYear();
+    let currentMonth = new Date().getMonth();
+    const today = new Date();
 
-            const firstDay = new Date(year, month, 1);
-            const lastDay = new Date(year, month + 1, 0);
-            let startDay = firstDay.getDay(); // Get day of week (0 = Sunday)
+    function getMonthName(month) {
+      const monthNames = [
+        "January",
+        "February",
+        "March",
+        "April",
+        "May",
+        "June",
+        "July",
+        "August",
+        "September",
+        "October",
+        "November",
+        "December"
+      ];
+      return monthNames[month];
+    }
 
-            startDay = startDay === 0 ? 6 : startDay - 1; // Adjust for Monday start
+    function showDayCard(day, month, year) {
+      const card = document.getElementById("day-card");
+      const cardTitle = document.getElementById("selected-day-title");
+      cardTitle.textContent = `Selected Day: ${day} ${getMonthName(month)} ${year}`;
+      card.style.display = "block";
+    }
 
-            for (let i = 0; i < startDay; i++) {
-                const emptyCell = document.createElement("div");
-                emptyCell.className = "empty";
-                calendar.appendChild(emptyCell);
-            }
+    function generateCalendar(year, month) {
+      const calendar = document.getElementById("calendar");
+      const monthYear = document.getElementById("month-year");
+      calendar.innerHTML = "";
 
-            for (let day = 1; day <= lastDay.getDate(); day++) {
-                const dayCell = document.createElement("div");
-                dayCell.className = "day";
-                dayCell.textContent = day;
-                calendar.appendChild(dayCell);
-            }
+      const monthNames = [
+        "January",
+        "February",
+        "March",
+        "April",
+        "May",
+        "June",
+        "July",
+        "August",
+        "September",
+        "October",
+        "November",
+        "December"
+      ];
+      monthYear.textContent = `${monthNames[month]} ${year}`;
+
+      // Add weekdays header (Monday to Sunday)
+      const daysOfWeek = ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"];
+      daysOfWeek.forEach(day => {
+        const div = document.createElement("div");
+        div.className = "weekday";
+        div.textContent = day;
+        calendar.appendChild(div);
+      });
+
+      const firstDay = new Date(year, month, 1);
+      const lastDay = new Date(year, month + 1, 0);
+      let startDay = firstDay.getDay();
+      startDay = startDay === 0 ? 6 : startDay - 1; // Adjust for Monday start
+
+      const prevMonthLastDay = new Date(year, month, 0).getDate();
+      // Fill previous month days
+      for (let i = startDay - 1; i >= 0; i--) {
+        const prevDay = prevMonthLastDay - i;
+        const prevCell = document.createElement("div");
+        prevCell.className = "day disabled-day";
+        prevCell.textContent = prevDay;
+        calendar.appendChild(prevCell);
+      }
+
+      // Active days for current month
+      for (let day = 1; day <= lastDay.getDate(); day++) {
+        const dayCell = document.createElement("div");
+        dayCell.className = "day current-month";
+        dayCell.textContent = day;
+
+        // If this is today, select by default (only if viewing the current month)
+        if (year === today.getFullYear() && month === today.getMonth() && day === today.getDate()) {
+          dayCell.classList.add("selected");
+          showDayCard(day, month, year);
         }
 
-        const today = new Date();
-        generateCalendar(today.getFullYear(), today.getMonth());
-    </script>
+        // Add click event listener to select day and show the card
+        dayCell.addEventListener("click", function() {
+          // Remove selection from any active day
+          document.querySelectorAll(".current-month.selected").forEach(cell => cell.classList.remove("selected"));
+          this.classList.add("selected");
+          showDayCard(day, month, year);
+        });
+        calendar.appendChild(dayCell);
+      }
+
+      // Fill next month days to complete the week
+      const totalCells = calendar.children.length;
+      const nextDays = totalCells % 7 === 0 ? 0 : 7 - (totalCells % 7);
+      for (let i = 1; i <= nextDays; i++) {
+        const nextCell = document.createElement("div");
+        nextCell.className = "day disabled-day";
+        nextCell.textContent = i;
+        calendar.appendChild(nextCell);
+      }
+    }
+
+    document.getElementById("prev-month").addEventListener("click", () => {
+      currentMonth--;
+      if (currentMonth < 0) {
+        currentMonth = 11;
+        currentYear--;
+      }
+      generateCalendar(currentYear, currentMonth);
+    });
+
+    document.getElementById("next-month").addEventListener("click", () => {
+      currentMonth++;
+      if (currentMonth > 11) {
+        currentMonth = 0;
+        currentYear++;
+      }
+      generateCalendar(currentYear, currentMonth);
+    });
+
+    generateCalendar(currentYear, currentMonth);
+  </script>
 </body>
 </html>
