feat: delete session added

--- a/index.html
+++ b/index.html
@@ -195,6 +195,24 @@
     let selectedDate = null;
     const today = new Date();
 
+    function deleteSession(sessionId) {
+            if (!confirm("Are you sure you want to delete this session?")) return;
+
+            fetch(`/api/study_sessions/${sessionId}`, {
+            method: "DELETE",
+            })
+            .then((res) => {
+                if (!res.ok) {
+                throw new Error("Failed to delete session");
+                }
+                return res.json();
+            })
+            .then(() => {
+                loadTimetable(selectedDate);
+            })
+            .catch((err) => console.error("Error deleting session:", err));
+    }
+
     // ----------------------------
     // Session & Subject Modal Code
     // ----------------------------
@@ -271,27 +289,6 @@
           })
           .catch((err) => console.error("Error loading subjects:", err));
       }
-
-      // Fetch study sessions for the selected day
-      function loadTimetable(date) {
-        timetable.innerHTML = "";
-        fetch(`/api/study_sessions?date=${date}`)
-          .then((res) => res.json())
-          .then((data) => {
-            if (data.length === 0) {
-              timetable.innerHTML = "<li class='list-group-item text-muted'>No sessions</li>";
-              return;
-            }
-            data.forEach((session) => {
-              const li = document.createElement("li");
-              li.classList.add("list-group-item");
-              li.innerHTML = `<strong>${session.start_time} - ${session.title}</strong><br>${session.description}`;
-              timetable.appendChild(li);
-            });
-          })
-          .catch((err) => console.error("Error loading sessions:", err));
-      }
-
       // Handle adding a new study session
       sessionForm.addEventListener("submit", function (e) {
         e.preventDefault();
@@ -486,24 +483,41 @@
 
     // Function to load timetable (declared here so it is accessible in showDayCard)
     function loadTimetable(date) {
-      const timetable = document.getElementById("timetable");
-      timetable.innerHTML = "";
-      fetch(`/api/study_sessions?date=${date}`)
+        const timetable = document.getElementById("timetable");
+        timetable.innerHTML = "";
+
+        fetch(`/api/study_sessions?date=${date}`)
         .then((res) => res.json())
         .then((data) => {
-          if (data.length === 0) {
-            timetable.innerHTML = "<li class='list-group-item text-muted'>No sessions</li>";
-            return;
-          }
-          data.forEach((session) => {
-            const li = document.createElement("li");
-            li.classList.add("list-group-item");
-            li.innerHTML = `<strong>${session.start_time} - ${session.title}</strong><br>${session.description}`;
-            timetable.appendChild(li);
-          });
+            if (data.length === 0) {
+                timetable.innerHTML = "<li class='list-group-item text-muted'>No sessions</li>";
+                return;
+            }
+
+            data.forEach((session) => {
+                const li = document.createElement("li");
+                li.classList.add("list-group-item", "d-flex", "justify-content-between", "align-items-center");
+
+                li.innerHTML = `
+                    <div>
+                        <strong>${session.start_time} - ${session.title}</strong><br>${session.description}
+                    </div>
+                    <button class="btn btn-danger btn-sm delete-session-btn" data-id="${session.id}">Delete</button>
+                `;
+                timetable.appendChild(li);
+            });
+
+            // Add event listeners to delete buttons **after** they are created
+            document.querySelectorAll(".delete-session-btn").forEach((button) => {
+                button.addEventListener("click", function () {
+                    const sessionId = this.getAttribute("data-id");
+                    deleteSession(sessionId);
+                });
+            });
         })
         .catch((err) => console.error("Error loading sessions:", err));
     }
+
   </script>
 </body>
 </html>
